# e-commerce

./: .gitignore  README.md  main.py  pyproject.toml
htmlcov/: class_index.html  function_index.html  index.html  status.json  z_145eef247bfb46b6___init___py.html  z_145eef247bfb46b6_classes_py.html  z_a44f0ac069e85531___init___py.html  z_a44f0ac069e85531_test_classes_py.html
src/: classes.py
tests/: test_classes.py
